[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://samples/set_trap.wav" type="AudioStream" id=3]
[ext_resource path="res://samples/bomb_fuse.wav" type="AudioStream" id=4]
[ext_resource path="res://samples/elixer_throw.wav" type="AudioStream" id=5]
[ext_resource path="res://samples/ow1.wav" type="AudioStream" id=6]
[ext_resource path="res://samples/ow2.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 282, 106, 141 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 106, 141 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 0, 106, 141 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 0, 106, 141 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 530, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 742, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 282, 106, 141 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 141, 106, 141 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "throw",
"speed": 18.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "bomb",
"speed": 4.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 15 ) ],
"loop": true,
"name": "trap",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 25.1751, 44.8409 )

[node name="Player" type="Area2D" groups=[
"player",
]]
light_mask = 16
collision_mask = 2
script = ExtResource( 2 )
speed = 200

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( 0.681, 0 )
frames = SubResource( 10 )
animation = "bomb"
offset = Vector2( 0, -57 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -44.273 )
shape = SubResource( 11 )

[node name="ElixerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BombTimer" type="Timer" parent="."]
one_shot = true

[node name="TrapTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Trap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 0.8

[node name="bomb_fuse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 0.9

[node name="elixer_throw" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 0.9

[node name="ow1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ow2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="ElixerTimer" to="." method="_on_ElixerTimer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
[connection signal="timeout" from="TrapTimer" to="." method="_on_TrapTimer_timeout"]
